fixed profile element vertical alignment + follow recs cards alignment for widths>=1078px

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -114,6 +114,10 @@ li {
 			min-height: 704.5px;
 		}
 	}
+
+	@media screen and (width>=988px) {
+		width: 100%;
+	}
 }
 
 .wrappers {
@@ -520,7 +524,7 @@ button:hover {
 		margin: 4px 0;
 		//align-self: flex-start;
 
-			@media screen and (height>=900px) {
+		@media screen and (height>=900px) {
 			margin: 16px 0px;
 		}
 	}
@@ -736,12 +740,15 @@ button:hover {
 			padding: 0 12px;
 			font-size: 15px;
 			box-sizing: border-box;
+			justify-content: space-between;
 
 			b {
-				padding-bottom: 2px;
+				padding-bottom: 3px;
+				//height: 21.063px;
 			}
 			div {
-				padding-top: 2px;
+				//box-sizing: border-box;
+				//padding-top: 2px;
 				color: #536471;
 			}
 		}
@@ -1708,6 +1715,8 @@ button:hover {
 			@media screen and (width>=1078px) {
 				min-width: 169.75px;
 				width: 169.75px;
+				margin-right: 4px;
+				padding: 0px;
 			}
 
 			b {
@@ -1776,7 +1785,7 @@ button:hover {
 		}
 		@media screen and (width>=1078px) {
 			width: 348px;
-			padding: 0;
+			//padding: 0;
 		}
 	}
 }
@@ -1813,6 +1822,11 @@ button:hover {
 			align-items: center;
 		}
 	}
+
+	@media screen and (width>=1078px) {
+		width: 318px;
+	}
+
 }
 
 .whiteSpace-right {
